Geometry Node: Set Tilt and Set Curve Radius node behave inconsistently when a Resample Curve node is used right after and its count set to 1. #92241

Closed
opened 2021-10-15 18:15:50 +02:00 by Godwin Jimoh · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon(TM) Vega 8 Graphics ATI Technologies Inc. 4.5.14830 Core Profile Context 21.4.1 27.20.21002.112

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-13 21:57, hash: 9dff3de6ac
Worked: None

Short description of error
As can be been in the video below, if the Set Tilt node and/or the Set Curve Radius node is used before the Resample Curve node, the behaviour of the Set Tilt node and/or the Set Curve Radius node behaves in reverse if the Count of the Resample Curve node is set to 1. In other words, Set Tilt actually sets the radius instead of the tilt and the Set Curve Radius sets the curve tilt instead of the radius. Everything works fine as expected if the Count of the Resample Curve node is set above 1
2021-10-15 16-54-07.mp4

Exact steps for others to reproduce the error

  1. Open the attached blend file and change the sliders as seen in the video above to see the effect of the bug
    Tilt bug.blend
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon(TM) Vega 8 Graphics ATI Technologies Inc. 4.5.14830 Core Profile Context 21.4.1 27.20.21002.112 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-13 21:57, hash: `9dff3de6ac` Worked: None **Short description of error** As can be been in the video below, if the **Set Tilt** node and/or the **Set Curve Radius** node is used before the **Resample Curve** node, the behaviour of the **Set Tilt** node and/or the **Set Curve Radius** node behaves in reverse if the Count of the **Resample Curve** node is set to 1. In other words, **Set Tilt** actually sets the radius instead of the tilt and the **Set Curve Radius** sets the curve tilt instead of the radius. Everything works fine as expected if the Count of the **Resample Curve** node is set above 1 [2021-10-15 16-54-07.mp4](https://archive.blender.org/developer/F11143184/2021-10-15_16-54-07.mp4) **Exact steps for others to reproduce the error** 1. Open the attached blend file and change the sliders as seen in the video above to see the effect of the bug [ Tilt bug.blend](https://archive.blender.org/developer/F11143235/_Tilt_bug.blend)
Author

Added subscriber: @Astronet-4

Added subscriber: @Astronet-4
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 051bb46c55

This issue was referenced by 051bb46c55010042f1f16fde71c9de2f5af6b6de
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-10-27 12:36:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92241
No description provided.