Fix T92241: curve radius and tilt swapped after resampling

This only happened when the spline contained a single point.